--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@
                 <h1>Cheese viewer portable</h1>
                 <p>copyright Big Cheese 1984</p>
             </div>
+
+            <div id="MenuButton" onclick="NavbarToggle()">
+                <p>Menu</p>
+            </div>
         
-            <div class="Navbar">
+            <div class="Navbar" id="Navbar">
                 <a href="#" onclick="DivSelected(0)">What is cheese</a>
                 <a href="#" onclick="DivSelected(1)">How do i make cheese</a>
                 <a href="#" onclick="DivSelected(2)">Can I die by eating cheese</a>
