--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/tiananmen web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/tiananmen web.data.br",
-        frameworkUrl: buildUrl + "/tiananmen web.framework.js.br",
-        codeUrl: buildUrl + "/tiananmen web.wasm.br",
+        dataUrl: buildUrl + "/tiananmen web.data",
+        frameworkUrl: buildUrl + "/tiananmen web.framework.js",
+        codeUrl: buildUrl + "/tiananmen web.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Cloud Computing",
